--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ See the end for copying conditions.
 
 Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
  
-Changes since 0.8.1:
+Changes from 0.8.1 to 0.8.1.1:
 
  * Charts are now rendered with colours from the Tango palette instead
    of fully saturated primaries.
