Documentation: Change index entry to be consistent with that in the tutorial section.

--- a/doc/statistics.texi
+++ b/doc/statistics.texi
@@ -214,7 +214,7 @@ but not currently honoured.
 
 @vindex EXAMINE
 @cindex Exploratory data analysis
-@cindex Normality, testing for
+@cindex normality, testing
 
 @display
 EXAMINE
